--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
 PyWavelets==1.1.1
-pywin32==300
+#pywin32==300
 pywinpty==0.5.7
 pyzmq==22.0.3
 requests==2.25.1
