--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ scikit-image==0.18.1
 scipy==1.6.1
 Send2Trash==1.5.0
 sniffio==1.2.0
+tensorboard==2.4.1
 terminado==0.9.2
 testpath==0.4.4
 tifffile==2021.2.1
