--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
+    "data_folder" : "./data",
+    "A_subfolder" : "CelebA_50k",
+    "B_subfolder" : "DogFaceNet_crops/",
     "lr": 0.0002,
     "batch_size": 1,
     "epochs": 20,
