--- a/config.json
+++ b/config.json
@@ -9,5 +9,7 @@
     "display_step": 500,
     "save_step": 5000,
     "val_step" : 250,
+    "lambda_identity" : 0.1,
+    "lambda_cycle" : 1,
     "description":"cycleGAN Baseline"
 }
