--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
     "data_folder" : "./data",
-    "A_subfolder" : "CelebA_50k",
+    "A_subfolder" : "CelebA_50k/downsampled_100/",
     "B_subfolder" : "DogFaceNet_crops/",
     "lr": 0.0002,
     "batch_size": 1,
-    "epochs": 20,
+    "epochs": 50,
     "device": "cuda",
     "display_step": 500,
     "save_step": 5000,
     "val_step" : 250,
     "lambda_identity" : 0.1,
-    "lambda_cycle" : 0.1,
+    "lambda_cycle" : 1,
     "description":"cycleGAN Baseline"
 }
