--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "data_folder" : "./data",
-    "A_subfolder" : "CelebA_50k/downsampled_100/",
-    "B_subfolder" : "DogFaceNet_crops/",
+    "A_subfolder" : "DogFaceNet_crops/",
+    "B_subfolder" : "CelebA_50k/downsampled_100/",
+    "L_subfolder" : "CelebA_50k/Landmakrs/downsampled_100/",
     "lr": 0.0002,
     "batch_size": 1,
     "epochs": 50,
